fix: remove showing scrollbars in every div in the channel

--- a/client/src/components/channel.scss
+++ b/client/src/components/channel.scss
@@ -24,11 +24,6 @@
 	height: inherit !important;
 }
 
-.quesync-channel-content * {
-	// Disable X-Axis scroll
-	overflow-x: hidden !important;
-}
-
 .quesync-message-field-wrapper {
 	padding: 0.7rem 1rem 0.7rem 1rem;
 }
